test_data/end_to_end/err__impl_inherent_fn_call_ambiguous/stderr.txt
error: multiple applicable items are in scope
  --> main.cz:12:13
12 |     S{t:42}.f();
                 ~
